# firefly-rk3308-linux

./: .gitignore  BoardConfig.mk
app/QLauncher/: QLauncher.pro  resources.qrc
app/gallery/: gallery.pro
app/music/: music.pro
app/rkffplay/: CMakeLists.txt  Config.in  rkffplay.rvmk
app/rkffplay/src/: CMakeLists.txt  buffers.c  buffers.h  ffplay.c  kmssink.c  kmssink.h
app/rkffplay/src/remote_control_test/: ffplay_ipc.c  ffplay_ipc.h  main.c
app/rkffplay/src/util/: kms.c
app/settings/: settings.pro
app/video/: video.pro
buildroot/: .gitignore
buildroot/configs/: firefly_rk3308_ext_release_defconfig  firefly_rk3308_minigui_release_defconfig  firefly_rk3308_qt_release_defconfig  firefly_rk3308_recovery_defconfig  firefly_rk3308_release_defconfig  rockchip_rk3308_32_debug_defconfig  rockchip_rk3308_32_dueros_defconfig  rockchip_rk3308_32_release_defconfig  rockchip_rk3308_64_dueros_defconfig  rockchip_rk3308_b_32_release_defconfig  rockchip_rk3308_b_release_defconfig  rockchip_rk3308_gk_32_release_defconfig  rockchip_rk3308_pcba_defconfig  rockchip_rk3308_release_defconfig  rockchip_rk3308_robot32_defconfig  rockchip_rk3308_robot64_defconfig
buildroot/package/: Config.in  Config.in.host
kernel/: MAINTAINERS  Makefile
rkbin/RKBOOT/: RK3308MINIALL.ini
u-boot/: make.sh
u-boot/common/: boot_rkimg.c  fdt_support.c
u-boot/configs/: firefly-rk3308-debug-uart4-logo_defconfig  firefly-rk3308-debug-uart4_defconfig  firefly-rk3308-logo_defconfig  firefly-rk3308_defconfig  rk3308_debug_uart4_defconfig
u-boot/include/: boot_rkimg.h
(+258 files in other folders)
